--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img width="50px" height="50px" src="./1647078558399.png" alt="">
             <div class="list">
                 <ul>
-                    <li><a href="">HOOME</a></li>
+                    <li><a href="">HOME</a></li>
                     <li><a href="">REGOIN</a></li>
                     <li><a href="">ABOUT</a></li>
                     <li><a href=""><span class="material-icons">more_vert</span></a></li>
